# totp-gen

./: Cargo.toml  LICENSE-MIT  README.md  shell.nix
src/: main.rs
