[package]
name = "totp-gen"
version = "1.0.0"
edition = "2021"
authors = ["Wojtek Kaniak <wojtek.kaniak@proton.me>"]
license = "MIT OR APACHE-2.0"

[dependencies]
anyhow = "1.0.86"
base32 = "0.5.1"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
hmac = "0.12.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha-1 = "0.10.1"
